--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "browserslist":[
+    "defaults"
+  ],
   "scripts": {
     "dev": "npx parcel src/index.html --open",
     "build": "npx parcel src/index.html build"
