--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "browserslist":[
+  "browserslist": [
     "defaults",
     "since 2017-06"
   ],
@@ -16,11 +16,16 @@
   "license": "ISC",
   "dependencies": {
     "gsap": "^3.11.3",
+    "imagesloaded": "^5.0.0",
     "parcel-bundler": "^1.12.5",
+    "smooth-scrollbar": "^8.8.1",
     "swiper": "^8.4.5",
+    "three": "^0.148.0",
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
+    "glslify-bundle": "^5.1.1",
+    "glslify-deps": "^1.3.2",
     "sass": "^1.56.1"
   }
 }
